infra/kubernetes/cluster-01/apps/media/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
